New project name, New SDK

--- a/BubblesTwo/fr.lproj/Localizable.strings
+++ b/BubblesTwo/fr.lproj/Localizable.strings
@@ -2,8 +2,8 @@
  Localizable.strings
  BubblesTwo
  
- Created by Pierre RACINE on 25/04/2016.
- Copyright © 2016 Absolutlabs. All rights reserved.
+ Created by Karim Koriche on 25/04/2016.
+ Copyright © 2017 Bubbles Company.  All rights reserved.
  */
 
 "application_language" = "fr";
